# avocado

./: Cargo.toml  README.md  build.rs
assets/: secret_message.txt
avocado_dyn/: Cargo.toml
avocado_dyn/src/: lib.rs
avocado_lib/: Cargo.toml
avocado_lib/src/: app.rs  lib.rs
avocado_lib/src/asset/: asset.rs  event.rs  ext.rs  graph.rs  handle.rs  loader.rs  mod.rs  reader.rs  server.rs
avocado_lib/src/core/: event.rs  ext.rs  mod.rs  sys.rs  time.rs
avocado_lib/src/graphics/: color.rs  img.rs  mod.rs
avocado_lib/src/log/: config.rs  mod.rs
avocado_lib/src/winit/: config.rs  event.rs  ext.rs  frame.rs  mod.rs  res.rs  runner.rs  sys.rs
avocado_lib/src/winit/g2d/: atlas.rs  batch.rs  mod.rs  vert.rs
avocado_lib/src/winit/input/: key.rs  kind.rs  state.rs
avocado_lib/src/winit/render/: camera.rs  framebuffer.rs  graph.rs  mod.rs  texture.rs
crates/asset/: Cargo.toml
crates/asset/src/: asset.rs  ext.rs  graph.rs  handle.rs  lib.rs  loader.rs  reader.rs  server.rs  sys.rs
crates/core/: Cargo.toml
crates/core/src/: app.rs  lib.rs  sys.rs  time.rs
crates/g2d/: Cargo.toml
crates/g2d/src/: atlas.rs  batch.rs  batch_conf.rs  lib.rs  vert.rs
crates/graphics/: Cargo.toml
crates/graphics/src/: color.rs  img.rs  lib.rs
crates/input/: Cargo.toml
crates/input/src/: key.rs  lib.rs
crates/log/: Cargo.toml
crates/log/src/: config.rs  lib.rs
crates/utils/: Cargo.toml
crates/utils/src/: bin_pack.rs  lib.rs
crates/winit/: Cargo.toml
crates/winit/src/: config.rs  event.rs  ext.rs  frame.rs  lib.rs  res.rs  runner.rs  sys.rs
crates/winit/src/render/: camera.rs  framebuffer.rs  graph.rs  sampler.rs  shader.rs  texture.rs
examples/: hello_world.rs
examples/asset/: asset_basic.rs  asset_graph.rs  basic.rs
examples/core/: fixed_timestep.rs
examples/g2d/: sprite_batch.rs
examples/winit/: hello_graphics.rs
examples/winit/g2d/: sprite_batch.rs
src/: bin_pack.rs  lib.rs  sys.rs
src/asset/: asset.rs  event.rs  ext.rs  graph.rs  handle.rs  loader.rs  mod.rs  reader.rs  server.rs  sys.rs
src/core/: app.rs  config.rs  event.rs  ext.rs  fixed_time.rs  mod.rs  sys.rs  time.rs
src/g2d/: atlas.rs  batch.rs  batch_conf.rs  mod.rs  vert.rs
src/graphics/: bin_pack.rs  bin_page.rs  color.rs  img.rs  mod.rs
src/input/: act.rs  binding.rs  event.rs  key.rs  manager.rs  mod.rs
src/log/: config.rs  mod.rs
src/winit/: camera.rs  config.rs  event.rs  ext.rs  frame.rs  framebuffer.rs  graph.rs  mod.rs  res.rs  runner.rs  sampler.rs  screen_quad.wgsl  shader.rs  sys.rs  texture.rs
src/winit/g2d/: batch.wgsl  batch_conf.rs  mod.rs
src/winit/input/: mod.rs
src/winit/render/: sampler.rs  shader.rs  texture.rs
