cargo-features = ["profile-rustflags"]

[package]
name = "avocado"
version = "0.1.0"
edition = "2021"
description = "2D game framework for personal uses."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/AvantTeam/avocado"

[workspace]
resolver = "2"

[lib]
crate_type = ["lib", "dylib"]

[profile.dev]
rustflags = ["-C", "prefer-dynamic"]

[features]
default = [
    "log",
    "core",
    "asset", "asset_folder",
    "winit", "winit_2d",
]

log = ["dep:env_logger"]
core = []
graphics = ["dep:image"]
asset = ["core"]
asset_folder = ["asset"]
asset_embedded = ["asset"]
winit = ["core", "asset", "graphics", "dep:winit", "dep:wgpu"]
winit_2d = ["winit"]

[dependencies]
env_logger = { version = "0.9", optional = true }
image = { version = "0.24", default-features = false, features = ["png"], optional = true }
winit = { version = "0.27", optional = true }
wgpu = { version = "0.14", optional = true }

bevy_ecs = "0.9"
bevy_math = "0.9"
bevy_ptr = "0.9"
bevy_reflect = "0.9"
bevy_tasks = "0.9"
bevy_utils = "0.9"
iyes_loopless = { version = "0.9", default-features = false, features = ["states"] }

anyhow = "1.0"
async-channel = "1.8"
bytemuck = { version = "1.12", features = ["derive"] }
cfg-if = "1.0"
crossbeam-channel = "0.5"
derive_more = "0.99"
downcast-rs = "1.2"
futures-lite = "1.12"
log = "0.4"
parking_lot = "0.12"
smallvec = { version = "1.10", features = ["serde", "union", "const_generics"] }
thiserror = "1.0"

[build-dependencies]
cargo-emit = "0.2"

[[example]]
name = "hello_world"
path = "examples/hello_world.rs"
required-features = ["log"]

[[example]]
name = "asset_basic"
path = "examples/asset/asset_basic.rs"
required-features = ["log", "core", "asset", "asset_folder"]

[[example]]
name = "asset_graph"
path = "examples/asset/asset_graph.rs"
required-features = ["log", "core", "asset", "asset_folder"]

[[example]]
name = "fixed_timestep"
path = "examples/core/fixed_timestep.rs"
required-features = ["log", "core"]

[[example]]
name = "hello_graphics"
path = "examples/winit/hello_graphics.rs"
required-features = ["log", "core", "winit"]

[[example]]
name = "sprite_batch"
path = "examples/winit/g2d/sprite_batch.rs"
required-features = ["log", "core", "winit", "winit_2d"]
