cargo-features = ["profile-rustflags"]

[package]
name = "avocado"
version = "0.1.0"
edition = "2021"
description = "2D game framework for personal uses."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/AvantTeam/avocado"

[workspace]
resolver = "2"
members = [
    "crates/asset",
    "crates/core",
    "crates/g2d",
    "crates/graphics",
    "crates/input",
    "crates/log",
    "crates/utils",
    "crates/winit",
]

[lib]
crate_type = ["lib", "dylib"]

[profile.dev]
rustflags = ["-C", "prefer-dynamic"]

[features]
default = [
    "asset", "asset_folder",
    "core",
    "graphics", "g2d",
    "log",
    "utils",
    "winit",
]

asset = ["core", "utils", "avocado_asset"]
asset_embedded = ["asset", "avocado_asset/asset_embedded"]
asset_folder = ["asset", "avocado_asset/asset_folder"]
core = ["utils", "avocado_core"]
g2d = ["asset", "core", "graphics", "utils", "winit", "avocado_g2d"]
graphics = ["asset", "core", "utils", "avocado_graphics"]
log = ["core", "utils", "avocado_log"]
utils = ["avocado_utils"]
winit = ["asset", "core", "graphics", "utils", "avocado_winit"]

[dependencies]
avocado_asset = { path = "crates/asset", version = "0.1", default-features = false, optional = true }
avocado_core = { path = "crates/core", version = "0.1", default-features = false, optional = true }
avocado_g2d = { path = "crates/g2d", version = "0.1", default-features = false, optional = true }
avocado_graphics = { path = "crates/graphics", version = "0.1", default-features = false, optional = true }
avocado_log = { path = "crates/log", version = "0.1", default-features = false, optional = true }
avocado_utils = { path = "crates/utils", version = "0.1", default-features = false, optional = true }
avocado_winit = { path = "crates/winit", version = "0.1", default-features = false, optional = true }

[build-dependencies]
cargo-emit = "0.2"

[dev-dependencies]
log = "0.4"

[[example]]
name = "hello_world"
path = "examples/hello_world.rs"
required-features = ["log", "core"]

[[example]]
name = "asset_basic"
path = "examples/asset/asset_basic.rs"
required-features = ["log", "core", "asset", "asset_folder"]

[[example]]
name = "asset_graph"
path = "examples/asset/asset_graph.rs"
required-features = ["log", "core", "asset", "asset_folder"]

[[example]]
name = "fixed_timestep"
path = "examples/core/fixed_timestep.rs"
required-features = ["log", "core"]

[[example]]
name = "hello_graphics"
path = "examples/winit/hello_graphics.rs"
required-features = ["log", "core", "winit"]

[[example]]
name = "sprite_batch"
path = "examples/winit/g2d/sprite_batch.rs"
required-features = ["log", "core", "winit", "g2d"]
