cargo-features = ["profile-rustflags"]

[package]
name = "avocado"
version = "0.1.0"
edition = "2021"
description = "2D game framework for personal uses."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/AvantTeam/avocado"
resolver = "2"

[lib]
crate_type = ["lib", "dylib"]

[profile.dev]
rustflags = ["-C", "prefer-dynamic"]

[features]
default = [
    "asset", "asset_folder",
    "core",
    "graphics", "g2d",
    "input",
    "log",
    "winit",
]

asset = ["core"]
asset_embedded = ["asset"]
asset_folder = ["asset"]
core = ["dep:bevy_ecs", "dep:bevy_tasks", "dep:iyes_loopless"]
g2d = ["winit"]
graphics = ["core", "dep:image"]
input = ["core"]
log = ["core", "dep:env_logger"]
winit = ["asset", "graphics", "dep:winit", "dep:wgpu"]

[dependencies]
# Common dependencies.
bevy_math = "0.9"
bevy_reflect = "0.9"
bevy_utils = "0.9"

anyhow = "1.0"
async-channel = "1.8"
bytemuck = { version = "1.12", features = ["derive"] }
cfg-if = "1.0"
crossbeam-channel = "0.5"
derive_more = "0.99"
downcast-rs = "1.2"
futures-lite = "1.12"
log = "0.4"
parking_lot = "0.12"
smallvec = { version = "1.10", features = ["serde", "union"] }
thiserror = "1.0"

# `core` dependencies.
bevy_ecs = { version = "0.9", optional = true }
bevy_tasks = { version = "0.9", optional = true }
iyes_loopless = { version = "0.9", default-features = false, features = ["states"], optional = true }

# `graphics` dependencies.
image = { version = "0.24", default-features = false, features = ["png"], optional = true }

# `log` dependencies.
env_logger = { version = "0.9", optional = true }

# `winit` dependencies.
winit = { version = "0.27", optional = true }
wgpu = { version = "0.14", optional = true }

[build-dependencies]
cargo-emit = "0.2"

[[example]]
name = "hello_world"
path = "examples/hello_world.rs"
required-features = ["log", "core"]

[[example]]
name = "asset_basic"
path = "examples/asset/asset_basic.rs"
required-features = ["log", "core", "asset", "asset_folder"]

[[example]]
name = "asset_graph"
path = "examples/asset/asset_graph.rs"
required-features = ["log", "core", "asset", "asset_folder"]

[[example]]
name = "fixed_timestep"
path = "examples/core/fixed_timestep.rs"
required-features = ["log", "core"]

[[example]]
name = "hello_graphics"
path = "examples/winit/hello_graphics.rs"
required-features = ["log", "core", "winit"]

[[example]]
name = "sprite_batch"
path = "examples/g2d/sprite_batch.rs"
required-features = ["log", "core", "winit", "g2d"]
