[package]
name = "avocado_dyn"
version = "0.1.0"
edition = "2021"
description = "Enables dynamic-linking for AVocado to speed up compile time."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/AvantTeam/avocado"

[lib]
crate-type = ["dylib"]

[dependencies]
avocado_lib = { path = "../avocado_lib", version = "0.1.0", default-features = false }
