[package]
name = "avocado_lib"
version = "0.1.0"
edition = "2021"
description = "Contains the actual AVocado library codes; don't use directly."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/AvantTeam/avocado"

[features]
log = ["dep:env_logger"]
core = []
graphics = []
asset = ["core"]
asset_folder = ["asset"]
asset_embedded = ["asset"]
winit = ["core", "graphics", "dep:winit", "dep:wgpu"]

[dependencies]
env_logger = { version = "0.9", optional = true }
winit = { version = "0.27", optional = true }
wgpu = { version = "0.14", optional = true }

bevy_ecs = "0.9"
bevy_math = "0.9"
bevy_ptr = "0.9"
bevy_reflect = "0.9"
bevy_tasks = "0.9"
bevy_utils = "0.9"
iyes_loopless = { version = "0.9", default-features = false, features = ["states"] }

anyhow = "1.0"
bytemuck = "1.12"
cfg-if = "1.0"
crossbeam-channel = "0.5"
derive_more = "0.99"
downcast-rs = "1.2"
futures-lite = "1.12"
log = "0.4"
parking_lot = "0.12"
smallvec = { version = "1.10", features = ["serde", "union", "const_generics"] }
thiserror = "1.0"
