[package]
name = "avocado_core"
version = "0.1.0"
edition = "2021"
description = "Core functionality of AVocado."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/AvantTeam/avocado"

[dependencies]
avocado_utils = { path = "../utils", version = "0.1", default-features = false }

bevy_ecs = "0.9"
bevy_tasks = "0.9"
iyes_loopless = { version = "0.9", default-features = false, features = ["states"] }

log = "0.4"
