[package]
name = "avocado_g2d"
version = "0.1.0"
edition = "2021"
description = "2D graphics for AVocado."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/AvantTeam/avocado"

[dependencies]
avocado_asset = { path = "../asset", version = "0.1", default-features = false }
avocado_core = { path = "../core", version = "0.1", default-features = false }
avocado_graphics = { path = "../graphics", version = "0.1", default-features = false }
avocado_utils = { path = "../utils", version = "0.1", default-features = false }
avocado_winit = { path = "../winit", version = "0.1", default-features = false }

bytemuck = { version = "1.12", features = ["derive"] }
