[package]
name = "avocado_graphics"
version = "0.1.0"
edition = "2021"
description = "Defines graphical stuff that do not need a window context, e.g. color."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/AvantTeam/avocado"

[dependencies]
avocado_asset = { path = "../asset", version = "0.1", default-features = false }
avocado_core = { path = "../core", version = "0.1", default-features = false }
avocado_utils = { path = "../utils", version = "0.1", default-features = false }

image = { version = "0.24", default-features = false, features = ["png"] }
