[package]
name = "avocado_input"
version = "0.1.0"
edition = "2021"
description = "Mockable input system for AVocado."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/AvantTeam/avocado"

[dependencies]
avocado_core = { path = "../core", version = "0.1", default-features = false }
avocado_utils = { path = "../utils", version = "0.1", default-features = false }
