[package]
name = "avocado_utils"
version = "0.1.0"
edition = "2021"
description = "Provides utility classes for AVocado."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/AvantTeam/avocado"

[dependencies]
bevy_math = "0.9"
bevy_reflect = "0.9"
bevy_utils = "0.9"

anyhow = "1.0"
async-channel = "1.8"
cfg-if = "1.0"
crossbeam-channel = "0.5"
derive_more = "0.99"
downcast-rs = "1.2"
futures-lite = "1.12"
log = "0.4"
parking_lot = "0.12"
smallvec = { version = "1.10", features = ["serde", "union", "const_generics"] }
thiserror = "1.0"
